# notscape

./: Cargo.toml
home/: index.html  script.js
src/: index.html  index.js  main.rs
