[package]
name = "notscape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
tide = "0.16.0"
dotenv = "0.15.0"
chrono = "0.4.22"
log = "0.4.17"
serde = { version = "1.0.144", features=["derive"] }
serde_json = "1.0.85"
uuid = "1.1.2"
thiserror = "1.0.32"
tide-websockets = "0.4.0"
tokio = {version = "1.21.0", features = ["full"] }
futures-util = "0.3.24"
petname = "1.1.2"

